--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       </body>
 
       <footer>
-        www 🎲 App Brewery 🎲 com
+       &copy; 2025 Preal Jesse Gepulgane. All Rights Reserved.
       </footer>
     </html>
